Limit to shown items, add art credit, smaller abi text to avoid wrapping

--- a/src/app/creatures/creatures-display/creatures-display.component.css
+++ b/src/app/creatures/creatures-display/creatures-display.component.css
@@ -107,7 +107,11 @@ p {
   width: 100%;
   text-align: center;
 }
+.abi-scores {
+  font-size: 0.85rem;
+}
 .abi-saves {
+  font-size: 0.85rem;
   font-style: italic;
   line-height: 0.5rem;
 }
